3rd-party jeszcze raz

--- a/3rd-party/stm32_usb_101/make/scripts/makefile.in
+++ b/3rd-party/stm32_usb_101/make/scripts/makefile.in
@@ -1,5 +1,5 @@
-#TOOLCHAIN = arm-elf-
-TOOLCHAIN = arm-none-eabi-
+TOOLCHAIN = arm-elf-
+# TOOLCHAIN = arm-none-eabi-
 CC        = $(TOOLCHAIN)gcc
 AS        = $(TOOLCHAIN)as
 AR        = $(TOOLCHAIN)ar
